@@ -2,14 +2,14 @@ package uk.gov.hmcts.reform.sscs.functional.mya;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
-import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.Assert.assertNull;
 
 import java.io.IOException;
 import java.util.List;
 import org.json.JSONArray;
 import org.json.JSONException;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.Test;
+import org.junit.Ignore;
+import org.junit.Test;
 import uk.gov.hmcts.reform.sscs.ccd.domain.AudioVideoEvidence;
 import uk.gov.hmcts.reform.sscs.ccd.domain.ScannedDocument;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseDetails;
@@ -29,7 +29,8 @@ public class EvidenceUploadTest extends BaseFunctionTest {
         List<ScannedDocument> scannedDocument = caseDetails.getData().getScannedDocuments();
         assertThat(scannedDocument.size(), is(1));
         String expectedEvidenceUploadFilename = String.format("Representative upload 1 - %s.pdf", caseDetails.getId());
-        assertThat(scannedDocument.getFirst().getValue().getFileName(), is(expectedEvidenceUploadFilename));
+        assertThat(scannedDocument.get(0).getValue().getFileName(), is(expectedEvidenceUploadFilename));
+
     }
 
     @Test
@@ -57,11 +58,11 @@ public class EvidenceUploadTest extends BaseFunctionTest {
         List<ScannedDocument> scannedDocument = caseDetails.getData().getScannedDocuments();
         assertThat(scannedDocument.size(), is(1));
         String expectedEvidenceUploadFilename = String.format("Appellant upload 1 - %s.pdf", caseDetails.getId());
-        assertThat(scannedDocument.getFirst().getValue().getFileName(), is(expectedEvidenceUploadFilename));
+        assertThat(scannedDocument.get(0).getValue().getFileName(), is(expectedEvidenceUploadFilename));
     }
 
     @Test
-    @Disabled
+    @Ignore
     public void uploadAudioThenSubmitEvidenceToAppeal() throws IOException, JSONException, InterruptedException {
         CreatedCcdCase createdCcdCase = createCase();
 
@@ -86,10 +87,10 @@ public class EvidenceUploadTest extends BaseFunctionTest {
         assertNull(caseDetails.getData().getScannedDocuments());
         List<AudioVideoEvidence> audioVideoEvidences = caseDetails.getData().getAudioVideoEvidence();
         assertThat(audioVideoEvidences.size(), is(1));
-        assertThat(audioVideoEvidences.getFirst().getValue().getFileName(), is("evidence.mp3"));
+        assertThat(audioVideoEvidences.get(0).getValue().getFileName(), is("evidence.mp3"));
 
         String expectedEvidenceUploadFilename = String.format("Appellant upload 1 - %s.pdf", caseDetails.getId());
-        assertThat(audioVideoEvidences.getFirst().getValue().getStatementOfEvidencePdf().getDocumentFilename(), is(expectedEvidenceUploadFilename));
+        assertThat(audioVideoEvidences.get(0).getValue().getStatementOfEvidencePdf().getDocumentFilename(), is(expectedEvidenceUploadFilename));
     }
 
     @Test
